Set focus on the view on mouse-over

This "should" solve the issues we have when an widget in a docker
has input focus, and people move the cursor back to the canvas
and start to pan or paint.

However, it's a _very_ brute-force method, so we all need to be
aware of this change and check whether stupid things happen, in
which case we might need to do something a bit more subtle, with
timers or so...

CCMAIL:kimageshop@kde.org
BUG:372646