libs/ui/KisView.cpp
@@ -707,6 +707,12 @@ void KisView::closeEvent(QCloseEvent *event)
 
 }
 
+void KisView::mouseMoveEvent(QMouseEvent *event)
+{
+    setFocus();
+}
+
+
 bool KisView::queryClose()
 {
     if (!document())
